SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/Schedule_of_Value_Lines__c.object-meta.xml
<CustomObject>
    <label>Schedule of Value Lines</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SOV Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule of Values Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>