SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Description_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Work__c</fullName>
    <label>Description of Work</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>