SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <label>Grouping</label>
    <type>TextArea</type>
</CustomField>