SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Is_Created_First_time__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_First_time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a dummy field created For manage soc button</description>
    <label>Is Created First time</label>
    <type>Checkbox</type>
</CustomField>