SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/isConsolidated__c.field-meta.xml
<CustomField>
    <fullName>isConsolidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isConsolidated</label>
    <type>Checkbox</type>
</CustomField>