SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>