SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Item_New__c.field-meta.xml
<CustomField>
    <fullName>Item_New__c</fullName>
    <defaultValue>1</defaultValue>
    <description>New Item Number Sequence Numbers</description>
    <label>Item #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>