SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Old_Sov_Line_Ids_From_Project__c.field-meta.xml
<CustomField>
    <fullName>Old_Sov_Line_Ids_From_Project__c</fullName>
    <label>Old Sov Line Ids From Project</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>