SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Old_Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Vendor_Id__c</fullName>
    <label>Old Vendor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>