SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Schedule_of_Values__c.field-meta.xml
<CustomField>
    <fullName>Schedule_of_Values__c</fullName>
    <label>Schedule of Values</label>
    <referenceTo>Schedule_of_Values__c</referenceTo>
    <relationshipLabel>Schedule of Values Lines</relationshipLabel>
    <relationshipName>Schedule_of_Values_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>