SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <label>Company Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Company Rejected</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Vendor Submitted</fullName>
            </value>
            <value>
                <fullName>Company Submitted</fullName>
            </value>
            <value>
                <fullName>Customer Rejected</fullName>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>