SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Vendor_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Item_Number__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Item Number</label>
    <type>Text</type>
</CustomField>