SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Vendor_Item_Number_New__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Item_Number_New__c</fullName>
    <description>New Vendor Item Number Field</description>
    <label>Vendor Item Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>