SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/fields/Vendor_Scheduled_Value__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Scheduled_Value__c</fullName>
    <label>Scheduled Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>