SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/validationRules/restrice_edit_when_status_is_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>restrice_edit_when_status_is_approved</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(ISNEW()),
OR(ISPICKVAL(PRIORVALUE(Status__c) , &quot;Vendor Submitted&quot;),ISPICKVAL(PRIORVALUE(Status__c) , &quot;Approved&quot;),
AND(ISPICKVAL(PRIORVALUE(Status__c) , &quot;Vendor Submitted&quot;),(ISCHANGED( Status__c ))))
)</errorConditionFormula>
    <errorMessage>You cannot edit the record, once the status is Vendor Submitted or Company Approved</errorMessage>
</ValidationRule>