SubBt/force-app/main/default/objects/Schedule_of_Value_Lines__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description_of_Work__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Scheduled_Value__c</columns>
    <columns>Schedule_of_Values__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>